--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "dev": "yarn start & webpack --watch --mode development --config webpack.config.js",
         "start": "node server.js",
         "ngrok": "ngrok http 3000 -host-header=\"localhost:3000\"",
+        "lint": "eslint \"**/*.js\" --fix",
         "build": "webpack --mode production --config webpack.config.js"
     },
     "dependencies": {
