--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "*.scss",
         "core-js/stable"
     ],
+    "browserslist": "last 2 version, not < 0.2%, not ie  <= 11, not dead, not android < 5, safari 11",
     "description": "",
     "main": "index.js",
     "scripts": {
