--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/preset-env": "^7.6.0",
         "@babel/preset-react": "^7.0.0",
         "@huth/utils": "^1.0.1",
+        "autoprefixer": "^9.6.1",
         "babel-eslint": "^10.0.3",
         "babel-loader": "^8.0.6",
         "classnames": "^2.2.6",
@@ -39,6 +40,7 @@
         "mini-css-extract-plugin": "^0.8.0",
         "ngrok": "^3.2.5",
         "node-sass": "^4.12.0",
+        "postcss-loader": "^3.0.0",
         "react": "^16.9.0",
         "react-dom": "^16.9.0",
         "sass-loader": "^8.0.0",
